[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
